practice/practicejune/section41/ingress-controller/magicalnginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magicalnginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magical-nginx
  template:
    metadata:
      labels:
        app: magical-nginx
    spec:
      containers:
        - name: magical-nginx
          image: nginx:latest
          ports:
            - name: nginx-port
              containerPort: 80
