practice/practicejune/section41/ingress-controller/magicalnginx-deployment-service.yml
apiVersion: v1
kind: Service
metadata:
  name: magical-nginx
spec:
  type: NodePort
  selector:
    app: magical-nginx
  ports:
    - protocol: TCP
      port: 80
      nodePort: 31302
      name: http
