practice/practicejune/section41/ingress-controller/nginx-deployment-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-official-service
spec:
  type: NodePort
  selector:
    app: nginx-official
  ports:
    - protocol: TCP
      port: 80
      nodePort: 31014
